# turing_college_ds

./: README.md
Data_wrangling/calculator/: Dockerfile  LICENSE  README.md  setup.cfg
Data_wrangling/calculator/.hypothesis/examples/043b4cc19136e811/: a88199e747f7d711
Data_wrangling/calculator/.hypothesis/examples/128acc1db1721998/: 67c2d1ee993ed3f9
Data_wrangling/calculator/.hypothesis/examples/13dbe8a5abf8eb2f/: 04c254afd0f6f6b0  078f1283f2a01381  08d4ff8ad353af1c  09bbd65a4f131dbd  0aee6875e34765b1  1045e46bc11a3fdc  104b06897df83421  10ea8ced5da806e6  10fe9c1ca9a06119  1160e89a82e46318  11d70b3da5295a7c  1247c5d2b0d70b15  157d0b847aac3053  15938e5868d710d6  166fe4c089210f8a  16aa7f665f5aa3a1  16f980737ff200f7  1a6a4dc9838a61ae  1b0540a1d22a49f8  1bd98c2bcdce1d41  1d3078fe436a1420  1d45db3a4f24450d  1e5751a5bdefcb30  1faf89dee1b527e7  2052da06975fba79  20e62b5664d872c4  219975d287168d8a  22759a8d9a3bd7ce  22b9c086f3543394  23bada7a75aaaacc  26c176b8274c05e2  277b8b40351fc304  2a24457bc7789db9  2c072b6b3a8418fb  2d9cf0f437e3e708  30740670561ccfbd  30b36c7512e4a0c8  3223e0cabfc3f991  33d90dfd89a7632c  3644a374c377f5b9  (+187 more)
Data_wrangling/calculator/.hypothesis/examples/13e674c65db8a228/: 61a9682a4f860633  c34153955bcd3697  ca20fd70fdeb5ee2  d6ae1068ea2b9b2f  d8ba2575a05b0e12
Data_wrangling/calculator/.hypothesis/examples/1424a9672cb404de/: 10757eefbfa85351  (+4 more)
Data_wrangling/calculator/src/gerardocalc/: calculator.py
Data_wrangling/calculator/src/gerardocalc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Data_wrangling/calculator/tests/: test_calculator.py
(+3598 files in other folders)
