[metadata]
name = gerardocalc
version = 0.0.14
author = Gerardo Suarez
author_email = gerardofingurbe@gmail.com
description = Project for sprint 1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mcditoos.github.io
project_urls =
    Bug Tracker = https://mcditoos.github.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src